Fix missing armor dye color in item list + Fixed usage of deprecated JsonParser methods. + Combined search bar and search title into single class. + Rename local repo dir from "Skypixel/item-repo" to "Skyblocker/item-repo"